Added new PreserveGridState() method to all relevant backend grids

--- a/src/Plugins/SmartStore.GoogleMerchantCenter/Views/FeedFroogle/Configure.cshtml
+++ b/src/Plugins/SmartStore.GoogleMerchantCenter/Views/FeedFroogle/Configure.cshtml
@@ -524,6 +524,7 @@
 						.Select("GoogleProductList", "FeedFroogle");
 				})
 				.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
+				.PreserveGridState()
 				.EnableCustomBinding(true)
 			)
         </td>
