--- a/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListLogs.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListLogs.cshtml
@@ -97,6 +97,7 @@
                             dataBinding.Ajax().Select("ListLogs", "ActivityLog")
                                 .Delete("AcivityLogDelete", "ActivityLog");
                         })
+						.PreserveGridState()
                         .EnableCustomBinding(true))
             </td>
         </tr>
