--- a/src/Presentation/SmartStore.Web/Administration/Views/Campaign/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Campaign/List.cshtml
@@ -33,6 +33,7 @@
                             .Width(180);
                     })
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Campaign"))
+					.PreserveGridState()
                     .EnableCustomBinding(true))
         </td>
     </tr>
