--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -339,6 +339,7 @@
 						.Width(180);
 					})
 					.Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
+					.PreserveGridState()
 					.EnableCustomBinding(true))
                     </td>
                 </tr>
