--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
@@ -459,6 +459,7 @@
                     {
                         dataBinding.Ajax().Select("OrderList", "Customer", new { customerId = Model.Id });
                     })
+					.PreserveGridState()
                     .EnableCustomBinding(true))
         
 }
