--- a/src/Presentation/SmartStore.Web/Administration/Views/GiftCard/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/GiftCard/_CreateOrUpdate.cshtml
@@ -213,6 +213,7 @@
                     {
                         dataBinding.Ajax().Select("UsageHistoryList", "GiftCard", new { giftCardId = Model.Id });
                     })
+					.PreserveGridState()
                     .EnableCustomBinding(true))
     
 }
