--- a/src/Presentation/SmartStore.Web/Administration/Views/News/Comments.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/News/Comments.cshtml
@@ -64,6 +64,7 @@
                             settingBuilder = settingBuilder.Delete("CommentDelete", "News");
                         }
                     })
+					.PreserveGridState()
                     .EnableCustomBinding(true))
         </td>
     </tr>
