--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
@@ -221,6 +221,7 @@
                         })
                         .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
                         .DataBinding(dataBinding => dataBinding.Ajax().Select("OrderList", "Order"))
+						.PreserveGridState()
                         .EnableCustomBinding(true))
             </td>
         </tr>
