--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/ProductTags.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/ProductTags.cshtml
@@ -50,6 +50,7 @@
 							.Select("ProductTags", "Product")
                             .Delete("ProductTagDelete", "Product");
                     })
+					.PreserveGridState()
                     .EnableCustomBinding(true))
             </td>
         </tr>
