--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/List.cshtml
@@ -88,6 +88,7 @@
 					.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "ReturnRequest"))
 					.ClientEvents(events => events.OnDataBinding("returnRequestGrid_onDataBinding"))
+					.PreserveGridState()
                     .EnableCustomBinding(true))
         </td>
     </tr>
