--- a/src/Presentation/SmartStore.Web/Administration/Views/ShoppingCart/CurrentCarts.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ShoppingCart/CurrentCarts.cshtml
@@ -63,6 +63,7 @@
                         )
                         .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
                         .DataBinding(dataBinding => dataBinding.Ajax().Select("CurrentCarts", "ShoppingCart"))
+						.PreserveGridState()
                         .EnableCustomBinding(true))
             </td>
         </tr>
