--- a/src/Presentation/SmartStore.Web/Administration/Views/ShoppingCart/CurrentWishlists.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ShoppingCart/CurrentWishlists.cshtml
@@ -53,6 +53,7 @@
                         )
                         .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
                         .DataBinding(dataBinding => dataBinding.Ajax().Select("CurrentWishlists", "ShoppingCart"))
+						.PreserveGridState()
                         .EnableCustomBinding(true))
             </td>
         </tr>
