--- a/src/Presentation/SmartStore.Web/Administration/Views/Blog/Comments.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Blog/Comments.cshtml
@@ -63,6 +63,7 @@
                             settingBuilder = settingBuilder.Delete("CommentDelete", "Blog");
                         }
                     })
+					.PreserveGridState()
                     .EnableCustomBinding(true))
         </td>
     </tr>
