--- a/src/Presentation/SmartStore.Web/Administration/Views/Blog/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Blog/List.cshtml
@@ -39,6 +39,7 @@
                     })
                     .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Blog"))
+					.PreserveGridState()
                     .EnableCustomBinding(true))
         </td>
     </tr>
