--- a/src/Presentation/SmartStore.Web/Administration/Views/Discount/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Discount/_CreateOrUpdate.cshtml
@@ -462,5 +462,6 @@
                         dataBinding.Ajax().Select("UsageHistoryList", "Discount", new { discountId = Model.Id })
                             .Delete("UsageHistoryDelete", "Discount");
                     })
+					.PreserveGridState()
                     .EnableCustomBinding(true))
 }
