--- a/src/Presentation/SmartStore.Web/Administration/Views/GiftCard/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/GiftCard/List.cshtml
@@ -77,6 +77,7 @@
                         })
                         .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
                         .DataBinding(dataBinding => dataBinding.Ajax().Select("GiftCardList", "GiftCard", Model))
+						.PreserveGridState()
                         .EnableCustomBinding(true))
             </td>
         </tr>
