--- a/src/Presentation/SmartStore.Web/Administration/Views/OnlineCustomer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/OnlineCustomer/List.cshtml
@@ -34,6 +34,7 @@
                     })
                     .Pageable(settings => settings.Total(Model.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "OnlineCustomer"))
+					.PreserveGridState()
                     .EnableCustomBinding(true))
         </td>
     </tr>
