--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentList.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentList.cshtml
@@ -100,6 +100,7 @@
                         })
                         .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
                         .DataBinding(dataBinding => dataBinding.Ajax().Select("ShipmentListSelect", "Order"))
+						.PreserveGridState()
                         .EnableCustomBinding(true))
             </td>
         </tr>
