--- a/src/Presentation/SmartStore.Web/Administration/Views/RecurringPayment/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/RecurringPayment/List.cshtml
@@ -55,6 +55,7 @@
                     })
                     .Pageable(settings => settings.Total(Model.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "RecurringPayment"))
+					.PreserveGridState()
                     .EnableCustomBinding(true))
         </td>
     </tr>
