--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/Create.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/Create.cshtml
@@ -7,7 +7,8 @@
 {
     <div class="section-header">
         <div class="title">
-            @T("Admin.Catalog.Categories.AddNew") @Html.ActionLink("(" + T("Admin.Catalog.Categories.BackToList") + ")", "List")
+            @T("Admin.Catalog.Categories.AddNew") 
+			<a href='@Url.Referrer(Url.Action("List"))'>(@T("Admin.Catalog.Categories.BackToList"))</a>			
         </div>
         <div class="options">
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="fa fa-check"></i>&nbsp;@T("Admin.Common.Save")</button>
