--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -10,7 +10,7 @@
     <div class="section-header">
         <div class="title">
             @T("Admin.Orders.EditOrderDetails") - @Model.OrderNumber 
-			<a href='@Url.Referrer(Url.Action("List"))'>(@T("Admin.Orders.BackToList"))</a>
+			<a href='@Url.Action("List")'>(@T("Admin.Orders.BackToList"))</a>
         </div>
         <div class="options">
             <a href="@Url.Action("Print", new { orderId = Model.Id, pdf = false })" target="print" class="btn print-order-button" rel="nofollow">
