--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/Create.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/Create.cshtml
@@ -8,7 +8,7 @@
     <div class="section-header">
         <div class="title">
             @T("Admin.Catalog.Manufacturers.AddNew") 
-			<a href='@Url.Referrer(Url.Action("List"))'>(@T("Admin.Catalog.Manufacturers.BackToList"))</a>			
+			<a href='@Url.Action("List")'>(@T("Admin.Catalog.Manufacturers.BackToList"))</a>			
         </div>
         <div class="options">
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="fa fa-check"></i>&nbsp;@T("Admin.Common.Save")</button>
