--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/Create.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/Create.cshtml
@@ -8,7 +8,7 @@
     <div class="section-header">
         <div class="title">
             @T("Admin.Catalog.Products.AddNew") 
-			<a href='@Url.Referrer(Url.Action("List"))'>(@T("Admin.Catalog.Products.BackToList"))</a>
+			<a href='@Url.Action("List")'>(@T("Admin.Catalog.Products.BackToList"))</a>
         </div>
         <div class="options">
             <button type="submit" name="save" value="save" class="btn btn-primary entity-commit-trigger" data-commit-type="product" data-commit-action="insert" data-commit-id="@Model.Id">
