Perf: product list rendering up to 10x (!) faster now, depending on page size and view mode

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/paginator.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/paginator.less
@@ -21,7 +21,8 @@
 	border-bottom: none; 
 	border-left: none; 
 	padding-left: 4px; 
-	padding-right: 4px 
+	padding-right: 4px;
+	background: transparent;
 }
 .pagination .pagination-summary {
 	display: inline-block;
