--- a/src/Presentation/SmartStore.Web/Administration/Views/Common/SystemInfo.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Common/SystemInfo.cshtml
@@ -28,6 +28,7 @@
         </td>
         <td class="adminData">
             @Html.DisplayFor(model => model.AppVersion)
+			<a href='@Url.Action("CheckUpdate", new { enforce = true })' style="margin-left: 10px">Check for updates</a>
         </td>
     </tr>
     <tr>
