--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
@@ -1,16 +1,17 @@
-﻿@using SmartStore.Services.Customers;
+﻿@using SmartStore.Core.Domain.Stores;
+@using SmartStore.Services.Customers;
 @using SmartStore.Services.Stores;
 
 @{
     var currentCustomer = this.WorkContext.CurrentCustomer;
 	var currentLanguage = this.WorkContext.WorkingLanguage;
-    var usernamesEnabled = EngineContext.Current.Resolve<SmartStore.Core.Domain.Customers.CustomerSettings>().UsernamesEnabled;
-    var userName = usernamesEnabled ? currentCustomer.Username : currentCustomer.Email;
-	var stores = EngineContext.Current.Resolve<IStoreService>().GetAllStores();
+	var userName = (string)ViewBag.UserName;
+	var stores = (IList<Store>)ViewBag.Stores;
 	string currentLanguageCode = currentLanguage.UniqueSeoCode.EmptyNull().ToLower();
 	string communityUrl = (currentLanguageCode == "de" ? 
 		"http://community.smartstore.com" :
 		"http://community.smartstore.com/index.php?/&k=880ea6a14ea49e853634fbdc5015a024&setlanguage=1&cal_id=&langid=1");
+	var checkUpdateResult = (CheckUpdateResult)ViewBag.CheckUpdateResult;
 }
 
 <div id="navbar" class="navbar navbar-inverse">
@@ -52,17 +53,25 @@
 			</div>
 		}	
 
-		<div class="btn-group toppad pull-right">
+		<div id="navtool-help" class="btn-group toppad pull-right">
 			<button class="btn dropdown-toggle navbar-tool" title='@T("Admin.Help")' data-toggle="dropdown">
 				<i class="fa fa-fw fa-question-circle"></i>
+				@if (checkUpdateResult != null && checkUpdateResult.UpdateAvailable)
+				{
+					<span class="reddot" style="top: 5px; right: 7px"></span>
+				}
 			</button>
 			<ul class="dropdown-menu">
-				@*<li>
-					<a href="https://smartstore.zendesk.com/forums/22347533-Tipps-und-Tricks" data-lang="@currentLanguageCode">
-						<i class="fa fa-file"></i>
-						@T("Admin.Help.Topics")
-					</a>
-				</li>*@
+				@if (checkUpdateResult != null && checkUpdateResult.UpdateAvailable)
+				{
+					<li>
+						<a href='@Url.Action("CheckUpdate", new { area = "Admin" })'>
+							<i class="fa fa-fw fa-level-up"></i>
+							<strong>Update available</strong>
+							<span class="reddot" style="margin-left: 6px"></span>
+						</a>
+					</li>
+				}
 				<li>
 					<a href="@communityUrl" data-lang="@currentLanguageCode" target="help">
 						<i class="fa fa-fw fa-comment"></i>
